<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_color"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <ImageView
        android:layout_width="200dp"
        android:layout_height="84dp"
        android:layout_marginTop="40dp"
        android:layout_gravity="center_horizontal"
        android:src="@drawable/full_logo"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/welcome"
        android:layout_marginTop="15dp"
        android:layout_gravity="center_horizontal"
        android:textSize="30sp"
        android:textStyle="bold|italic"
        android:textColor="@color/header"
        android:text="@string/welcome_txt"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/warning"
        android:visibility="invisible"
        android:layout_gravity="center_horizontal"
        android:gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:textSize="24sp"
        android:textStyle="bold|italic"
        android:textColor="@color/error"
        android:text="@string/warning_text"/>

    <TextView
        android:id="@+id/notification"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="30dp"
        android:textSize="20sp"
        android:textColor="@color/text"
        android:text="@string/notification_text"/>

    <EditText
        android:id="@+id/pnum"
        android:inputType="phone"
        android:digits="0123456789+"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:hint="@string/hint_text"
        android:gravity="center"
        android:textColor="@color/text"
        android:backgroundTint="@color/text"
        android:textColorHint="@color/text"
        android:textSize="30sp"/>

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_gravity="center_horizontal"
        android:textColor="@color/bg_color"
        android:background="@color/header"
        android:text="@string/enter" />

</LinearLayout>